--- a/src/libcu.fileutils/dchmod.vcxproj
+++ b/src/libcu.fileutils/dchmod.vcxproj
@@ -14,9 +14,9 @@
     <CUARCH Condition="'$(CUARCH)'==''">35</CUARCH>
   </PropertyGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A8A42CE6-53C2-4F09-BA00-1C50C47CF608}</ProjectGuid>
-    <RootNamespace>Project1</RootNamespace>
-    <ProjectName>dcat</ProjectName>
+    <ProjectGuid>{AA39133E-E5E2-41E8-A12C-B8E051BD51DA}</ProjectGuid>
+    <RootNamespace>libcu</RootNamespace>
+    <ProjectName>dchmod</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dcat.cpp" />
-    <None Include="dcat.cu" />
+    <ClCompile Include="dchmod.cpp" />
+    <None Include="dchmod.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
