--- a/src/libcu.fileutils/dmkdir.vcxproj
+++ b/src/libcu.fileutils/dmkdir.vcxproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4314B1E0-BC0E-4D9D-A3B3-B6CB162D04A6}</ProjectGuid>
-    <RootNamespace>Project1</RootNamespace>
+    <RootNamespace>libcu</RootNamespace>
     <ProjectName>dmkdir</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
