--- a/src/libcu.fileutils/dcat.vcxproj
+++ b/src/libcu.fileutils/dcat.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dcat.cpp" />
+    <CudaCompile Include="dcat.cpp" />
     <None Include="dcat.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
