--- a/src/libcu.fileutils/dchmod.vcxproj
+++ b/src/libcu.fileutils/dchmod.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dchmod.cpp" />
+    <CudaCompile Include="dchmod.cpp" />
     <None Include="dchmod.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
