--- a/src/libcu.fileutils/dcp.vcxproj
+++ b/src/libcu.fileutils/dcp.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dcp.cpp" />
+    <CudaCompile Include="dcp.cpp" />
     <None Include="dcp.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
