--- a/src/libcu.fileutils/dmv.vcxproj
+++ b/src/libcu.fileutils/dmv.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dmv.cpp" />
+    <CudaCompile Include="dmv.cpp" />
     <CudaCompile Include="dmv.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
