--- a/src/libcu.fileutils/drm.vcxproj
+++ b/src/libcu.fileutils/drm.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="drm.cpp" />
+    <CudaCompile Include="drm.cpp" />
     <CudaCompile Include="drm.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
