--- a/src/libcu.fileutils/drmdir.vcxproj
+++ b/src/libcu.fileutils/drmdir.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="drmdir.cpp" />
+    <CudaCompile Include="drmdir.cpp" />
     <None Include="drmdir.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
