--- a/src/libcu.fileutils/dchown.vcxproj
+++ b/src/libcu.fileutils/dchown.vcxproj
@@ -87,7 +87,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dchown.cpp" />
+    <CudaCompile Include="dchown.cpp" />
     <CudaCompile Include="dchown.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
