--- a/src/libcu/libcu.vcxproj.filters
+++ b/src/libcu/libcu.vcxproj.filters
@@ -100,7 +100,6 @@
     <CudaCompile Include="libcu.cu" />
     <CudaCompile Include="program.cu" />
     <CudaCompile Include="libcu.stdlib.cu" />
-    <CudaCompile Include="fsystem.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="_content">
@@ -155,14 +154,12 @@
       <Filter>sys</Filter>
     </None>
     <None Include="stringcu.cu" />
-    <None Include="ext\bitvec.cu">
-      <Filter>ext</Filter>
-    </None>
     <None Include="ext\hash.cu">
       <Filter>ext</Filter>
     </None>
     <None Include="ext\memfile.cu">
       <Filter>ext</Filter>
     </None>
+    <None Include="fsystem.cu" />
   </ItemGroup>
 </Project>
