--- a/src/libcu.fileutils/dcat.vcxproj
+++ b/src/libcu.fileutils/dcat.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dcat.cpp" />
-    <None Include="dcat.cu" />
+    <CudaCompile Include="dcat.cu" />
+    <None Include="dcat.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
