--- a/src/libcu.fileutils/dchown.vcxproj
+++ b/src/libcu.fileutils/dchown.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dchown.cpp" />
     <CudaCompile Include="dchown.cu" />
+    <None Include="dchown.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
