--- a/src/libcu.fileutils/dcp.vcxproj
+++ b/src/libcu.fileutils/dcp.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dcp.cpp" />
-    <None Include="dcp.cu" />
+    <CudaCompile Include="dcp.cu" />
+    <None Include="dcp.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
