--- a/src/libcu.fileutils/dmore.vcxproj
+++ b/src/libcu.fileutils/dmore.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dmore.cpp" />
     <CudaCompile Include="dmore.cu" />
+    <None Include="dmore.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
