--- a/src/libcu.fileutils/dchmod.vcxproj
+++ b/src/libcu.fileutils/dchmod.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dchmod.cpp" />
-    <None Include="dchmod.cu" />
+    <CudaCompile Include="dchmod.cu" />
+    <None Include="dchmod.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
