--- a/src/libcu.fileutils/dmv.vcxproj
+++ b/src/libcu.fileutils/dmv.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="dmv.cpp" />
     <CudaCompile Include="dmv.cu" />
+    <None Include="dmv.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
