--- a/src/libcu.fileutils/drm.vcxproj
+++ b/src/libcu.fileutils/drm.vcxproj
@@ -87,8 +87,8 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="drm.cpp" />
     <CudaCompile Include="drm.cu" />
+    <None Include="drm.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
