--- a/src/libcu/libcu.vcxproj
+++ b/src/libcu/libcu.vcxproj
@@ -35,6 +35,8 @@
     <ClInclude Include="..\include\ext\memfile.h" />
     <ClInclude Include="..\include\ext\tagbase.h" />
     <ClInclude Include="..\include\fcntlcu.h" />
+    <ClInclude Include="..\include\grpcu.h" />
+    <ClInclude Include="..\include\pwdcu.h" />
     <ClInclude Include="..\include\sentinel-statmsg.h" />
     <ClInclude Include="..\include\setjmpcu.h" />
     <ClInclude Include="..\include\timecu.h" />
