--- a/src/libcu/libcu.vcxproj.filters
+++ b/src/libcu/libcu.vcxproj.filters
@@ -109,6 +109,8 @@
     <CudaCompile Include="libcu.cu" />
     <CudaCompile Include="program.cu" />
     <CudaCompile Include="libcu.stdlib.cu" />
+    <CudaCompile Include="grpcu.cu" />
+    <CudaCompile Include="pwdcu.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="_content">
