--- a/src/libcu.tests/libcu.tests.vcxproj.filters
+++ b/src/libcu.tests/libcu.tests.vcxproj.filters
@@ -14,6 +14,7 @@
       <Filter>Properties</Filter>
     </ClCompile>
     <ClCompile Include="fallocTest.cpp" />
+    <ClCompile Include="crtdefsTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -31,6 +32,7 @@
     <CudaCompile Include="stdargTest.cu" />
     <CudaCompile Include="stringTest.cu" />
     <CudaCompile Include="fallocTest.cu" />
+    <CudaCompile Include="crtdefsTest.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Properties">
