--- a/src/libcu.tests/libcu.tests.vcxproj.filters
+++ b/src/libcu.tests/libcu.tests.vcxproj.filters
@@ -15,6 +15,17 @@
     </ClCompile>
     <ClCompile Include="fallocTest.cpp" />
     <ClCompile Include="crtdefsTest.cpp" />
+    <ClCompile Include="direntTest.cpp" />
+    <ClCompile Include="fcntlTest.cpp" />
+    <ClCompile Include="fsystemTest.cpp" />
+    <ClCompile Include="grpTest.cpp" />
+    <ClCompile Include="pwdTest.cpp" />
+    <ClCompile Include="regexTest.cpp" />
+    <ClCompile Include="sentinelTest.cpp" />
+    <ClCompile Include="setjmpTest.cpp" />
+    <ClCompile Include="stddefTest.cpp" />
+    <ClCompile Include="timeTest.cpp" />
+    <ClCompile Include="unistdTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -33,6 +44,17 @@
     <CudaCompile Include="stringTest.cu" />
     <CudaCompile Include="fallocTest.cu" />
     <CudaCompile Include="crtdefsTest.cu" />
+    <CudaCompile Include="direntTest.cu" />
+    <CudaCompile Include="fcntlTest.cu" />
+    <CudaCompile Include="fsystemTest.cu" />
+    <CudaCompile Include="grpTest.cu" />
+    <CudaCompile Include="pwdTest.cu" />
+    <CudaCompile Include="regexTest.cu" />
+    <CudaCompile Include="sentinelTest.cu" />
+    <CudaCompile Include="setjmpTest.cu" />
+    <CudaCompile Include="stddefTest.cu" />
+    <CudaCompile Include="timeTest.cu" />
+    <CudaCompile Include="unistdTest.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Properties">
