--- a/src/libcu/libcu.vcxproj
+++ b/src/libcu/libcu.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="..\include\fcntlcu.h" />
     <ClInclude Include="..\include\grpcu.h" />
     <ClInclude Include="..\include\pwdcu.h" />
+    <ClInclude Include="..\include\sentinel-direntmsg.h" />
     <ClInclude Include="..\include\sentinel-fcntlmsg.h" />
     <ClInclude Include="..\include\sentinel-timemsg.h" />
     <ClInclude Include="..\include\setjmpcu.h" />
