--- a/src/libcu.ext/libcu.ext.native.nuspec
+++ b/src/libcu.ext/libcu.ext.native.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Libcu.Ext.Native</id>
-    <version>0.5.0</version>
+    <version>0.5.0-alpha</version>
     <title>Libcu falloc</title>
     <authors>Contoso</authors>
     <owners>Contoso</owners>
